Fixed Spacing

--- a/styles.css
+++ b/styles.css
@@ -10,16 +10,22 @@
 .image {
   margin-left: auto;
   margin-right: auto;
-  width: 20em;
+  width: 15em;
+}
+
+.social-links {
+  margin: 0;
+  padding: 0;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  height: 20vh;
 }
 
 .social-links ul {
-  position: absolute;
-  top: 73%;
-  left: 88%;
-  transform: translate(-50%, -50%);
-  display: flex;
-  width: 92em;
+  margin: 0;
+  padding: 0;
+  display: flex; 
 }
 
 .social-links ul li {
@@ -27,21 +33,19 @@
   margin: 8px;
 }
 
-.social-links ul li .fa {
-  color: #000000;
-  font-size: 30px;
-  line-height: 50px;
-}
-
 .social-links ul li a {
   position: relative;
-  display: block;
-  width: 50px;
-  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 60px;
+  height: 60px;
   border-radius: 50%;
-  text-align: center;
+  text-decoration: none;
+  font-size: 30px;
+  color: #000000;
   transition: 0.5s;
-  box-shadow: 0px 7px 5px rgba(0, 0, 0, 0.5);
+
 }
 
 .social-links ul li a:hover {transform: rotate(0deg) skew(0deg) translate(0, -20px);}
@@ -54,7 +58,6 @@
 
 .social-links ul li:nth-child(4) a {background-color: #0e76a8;}
 
-
 body {
   animation: 10000ms infinite color-change;
   max-width: 100%;
@@ -62,28 +65,10 @@ body {
 }
 
 @keyframes color-change {
-  0% {
-    background: linear-gradient(to left, #33ccff 0%, #ff99cc 100%);
-
-  }
-  20% {
-    background: linear-gradient(to left, #00cc66 0%, #66ffff 100%);
-
-  }
-  40% {
-    background: linear-gradient(to left, #993399 0%, #ff0000 100%);
-
-  }
-  60% {
-    background: linear-gradient(to left, #ff66cc 0%, #ffcc00 100%);
-
-  }
-  80% {
-    background: linear-gradient(to left, #00cc99 0%, #ff5050 100%);
-
-  }
-  100% {
-    background: linear-gradient(to left, #ff5050 0%, #ff99cc 100%);
-
-  }
+  0% {background: linear-gradient(to left, #33ccff 0%, #ff99cc 100%);}
+  20% {background: linear-gradient(to left, #00cc66 0%, #66ffff 100%);}
+  40% {background: linear-gradient(to left, #993399 0%, #ff0000 100%);}
+  60% {background: linear-gradient(to left, #ff66cc 0%, #ffcc00 100%);}
+  80% {background: linear-gradient(to left, #00cc99 0%, #ff5050 100%);}
+  100% {background: linear-gradient(to left, #ff5050 0%, #ff99cc 100%);}
 }
